--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Flor\\Documents\\NetBeansProjects\\mariadb-java-client-2.3.0.jar
 user.properties.file=C:\\Users\\Flor\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
