--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\Mu\u00f1eca Brava\\Downloads\\jcalendar-1.3.3.jar
 file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Mu\u00f1eca Brava\\Documents\\TP ULP\\Resto_1\\lib\\mariadb-java-client-2.3.0.jar
-file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Flor\\Documents\\NetBeansProjects\\mariadb-java-client-2.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}:\
-    ${file.reference.mariadb-java-client-2.3.0.jar-1}
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
