--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Mu\u00f1eca Brava\\Docum
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-2.3.0.jar}
+    ${file.reference.mariadb-java-client-2.3.0.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
