--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,6 +55,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.mariadb-java-client-2.3.0.jar=mariadb-java-client-2.3.0.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
